<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="lollipop">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.ytscleanarchitecture.presentation.ui.search.SearchViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/notosans_regular"
                android:stateListAnimator="@drawable/common_state_list_anim"
                android:text="@string/ment1"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/notosans_regular"
                android:stateListAnimator="@drawable/common_state_list_anim"
                android:text="@string/ment2"
                android:textSize="22sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/notosans_regular"
                android:stateListAnimator="@drawable/common_state_list_anim"
                android:text="@string/ment3"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/notosans_regular"
                android:stateListAnimator="@drawable/common_state_list_anim"
                android:text="@string/ment4"
                android:textSize="22sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/notosans_regular"
                android:stateListAnimator="@drawable/common_state_list_anim"
                android:text="@string/ment5"
                android:textSize="24sp" />


        </LinearLayout>

    </ScrollView>
</layout>